<resources>
    <string name="app_name">Student Chat</string>
    <string name="log_in_button">Log in</string>
    <string name="email_hint">e.g. firebase_admin@admin.com</string>
    <string name="username_text_view">Username:</string>
    <string name="password_text_view">Password:</string>
    <string name="password_hint">e.g. password12345</string>
    <string name="register_button">Register</string>
    <string name="e_mail_address_text_view">E-mail address:</string>
    <string name="username_hint">e.g. username</string>
    <string name="enter_a_message_hint">Enter a message.</string>
    <string name="login_request_failure">Failed to log in, check your credentials!</string>
    <string name="log_into_chat_service_button">Log into chat service</string>
    <string name="create_a_new_user_button">Create a new user</string>
    <string name="choose_an_entry_option_text_view">Choose an entry option.</string>
    <string name="online_users_menu_item">Online users</string>
    <string name="current_online_users_by_username_text_view">Current online users by username:</string>
    <string name="continue_with_register_button">Continue</string>
    <string name="choose_an_emoji_to_represent_your_avatar_text_view">Choose an emoji to represent your avatar</string>
    <string name="register_failure_error_message">Request failure :S Check if your e-mail is valid.</string>
    <string name="register_success_message">Registration successful!</string>
    <string name="choose_an_awesome_user_by_which_we_will_recognize_you_text_view">Choose an awesome username by which we will recognize you!</string>
    <string name="choose_your_account_details_and_make_sure_to_write_them_down_text_view">Choose your account details, and make sure to write them down!</string>
    <string name="fragment_dialog_positive_button">Yeah!</string>
    <string name="fragment_dialog_negative_button">Go back!</string>
</resources>
