<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.main.view.MainActivity">

    <ImageView
        android:id="@id/cobe_logo_image_view"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:src="@drawable/cobe_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@id/current_number_of_users_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/cobe_logo_image_view"
        android:layout_margin="5sp"
        android:gravity="center"
        android:padding="10sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@id/choose_an_option_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_button"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/choose_an_entry_option_text_view"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_button"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/log_into_chat_service_button" />

    <Button
        android:id="@id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/create_a_new_user_button" />
</RelativeLayout>
